--- a/src/component/AppLogo/styles.module.css
+++ b/src/component/AppLogo/styles.module.css
@@ -2,7 +2,10 @@
 	border-radius: 50%;
 	width: 65px;
 	height: 65px;
+	object-fit: cover;
+	display: block;
 }
+
 @media screen and (max-width: 1024px) {
 	.logo {
 		width: 50px;
