--- a/src/component/BlogSection/style.css
+++ b/src/component/BlogSection/style.css
@@ -150,13 +150,13 @@
 		align-items: center;
 	}
 	.blog-title > h3 {
-		font-size: 14px;
+		font-size: 16px;
 	}
 	.blog-title > p {
 		font-size: 18px;
 	}
 	.blogSection {
-		font-size: 12px;
+		font-size: 14px;
 		padding-top: 0px;
 	}
 	.viewall-blogs {
@@ -168,7 +168,10 @@
 		padding-bottom: 30px;
 	}
 	.viewall-blogs > p {
-		font-size: 12px;
+		font-size: 14px;
+	}
+	.viewall-blogs > a {
+		font-size: 14px;
 	}
 }
 
@@ -182,12 +185,13 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		width: 80%;
+		width: 100%;
 	}
 	.cart-blog-item > img {
-		max-width: 200px;
-		height: 200px;
-		margin: 0 auto;
+		max-width: 300px;
+		width: 300px;
+		height: 250px;
+		margin: 20px auto;
 		object-fit: contain;
 	}
 }
