--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -20,14 +20,19 @@
 	height: 100%;
 }
 .contact-map {
+	width: 100%;
 	display: flex;
 	justify-content: center;
-	padding-bottom: 100px;
+	padding: 0 15px 50px 15px;
+	box-sizing: border-box;
 }
+
 .contact-map > iframe {
-	width: 1100px;
-	height: 600px;
-	margin-left: 0px auto;
+	width: 100%;
+	max-width: 1100px;
+	height: 450px;
+	border-radius: 12px;
+	border: none;
 }
 @media screen and (max-width: 1480px) {
 	.about {
@@ -70,13 +75,17 @@
 	}
 	.about > h2,
 	.about > h3 {
-		text-align: center;
 		font-size: 18px;
-		padding: 5px;
+		padding: 10px;
+		color: #000;
 	}
 	.about > ul {
 		font-size: 14px;
 		text-align: justify;
 		padding: 40px;
+	}
+	.contact-map > iframe {
+		height: 400px;
+		margin-left: 0px auto;
 	}
 }
