change fonts , repair google map

--- a/src/component/ComunitySection/style.css
+++ b/src/component/ComunitySection/style.css
@@ -39,6 +39,9 @@
 	object-position: top;
 	flex: none;
 }
+.comunity-person > .comunity-person-img {
+	object-position: center;
+}
 .comunity-name > h3 {
 	text-align: left;
 	font-size: 16px;
